service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python
  name: python-app
  namespace: python
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: python
  type: ClusterIP
