ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: python
  name: python-app
  namespace: python
spec:
  rules:
  - host: python.hardikbhandari.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port:
              number: 80
