ingress_alert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: python
  name: python-alert
spec:
  rules:
  - host: alert.hardikbhandari.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port:
              number: 9093
