ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: python
  name: python-grafana
spec:
  rules:
  - host: new.hardikbhandari.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 6000
